feat: created the profile page ui and page the sapi for save and update user
